--- a/index.html
+++ b/index.html
@@ -5,9 +5,8 @@
     <title>Prez</title>
   </head>
   <body>
-    <p hidden>{ status: OK }</p>
     <ul class="container float">
-      <a href="test.pdf"><li class="item float-item">Test</li></a>
+      <a href="test.html"><li class="item float-item">Test</li></a>
     </ul>
   </body>
 </html>
